Deploy/k8s/5-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-api
  template:
    metadata:
      labels:
        app: go-api
    spec:
      containers:
        - name: go-api
          image: panchanandevops/golang-mux-app:2.0.1
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: go-api-service
  namespace: dev
spec:
  selector:
    app: go-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
